--- a/index.html
+++ b/index.html
@@ -1,78 +1,46 @@
-<!DOCTYPE html>
-<html lang="en-US">
+<!DOCTYPE HTML>
+<html>
 <head>
-<title>Hackathon Idea</title>
-<link rel="stylesheet" href="CSS practice.css">
+<style>
+body{color:white;}
+</style>
+<title>COVID-19 Help Yourself</title>
+<script src="javascripts practice.js">
+</script>
 </head>
-<body bgcolor="#F8F3DA">
-<h1 style="font-size:60px;">Rising Community <span style="color:red">Problems</span></h1>
-<h2><font color="#D31BC8 ">THIS IS JUST PRACTICE PAGE DO NOT TAKE CONTENT SERIOUSLY</font></h2>
-<div id="intro">
-<p>Due to corona, there is an upsurge of problems and hence <br/>1.We must find a solution<br/>2.We must not panic</p>
-</div>
-<p align="right" style="color:white;background-color:gray;">This is the productive page</p>
-<hr width="50%"/>
-<hr width="50px" align="right"/>
-<img src="Sakura.jpg" alt="Sakura Haruno is one of the protagonist in Naruto" height="50%" width="20%" border="2px"/>
-<p class="quote" align="center" title="Practicing Web development">"War against Corona"</p>
-<frameset cols="100, 25%, *">
-<p title='"We wil never ever give up"'>Use the following link for <a href="https://www.sololearn.com/Play/HTML" target="_blank">learning</a><p/>
-<ol><li><a href="https://www.youtube.com/" target="_blank">YouTube Videos</a></li><li><a target="_blank" href="https://www.lifehack.org/articles/money/this-list-50-low-cost-hobbies-will-excite-you-2.html">Hobbies</a></li><li><a href="https://www.sololearn.com/" target="_blank">problem solving</a></li></ol>
-<ul><li>C</li><li>Python</li><li>HTML</li></ul>
-</frameset>
-<table border="4" bgcolor="pink"><tr bgcolor="yellow"><td>Monday</td><td>Tuesday</td><td>Wednesday</td><td>Thursday</td><td>Friday</td></tr>
-<tr><td>Maths</td><td>Physics</td><td>Chemistry</td><td>Maths</td><td>Computer</td></tr>  
-<tr>
-      <td><br /></td>
-      <td colspan="4">This is Time table<br /></td>
-<tr rowspan="3"><td colspan="5" align="center">You must strictly follow it</td></tr>
-   </tr>
-</table>
-<p>Fill the following form to get help</p>
-<form action="file:///F:/Muskan/hackathon%20practice/Website.htm"s>
-Username<input type="text" name="Username" /><br/>
-Password<input type="password" name="Password" /><br/>
-<input type="radio" name="gender" value="Female"/>Female<br/>
-<input type="radio" name="gender" value="Male"/>Male<br/>
-<input type="radio" name="gender" value="Other"/>Other<br/>
-Enter Symptoms <br/>
-<input type="checkbox" name="symptoms" value="cough"/>cough<br/>
-<input type="checkbox" name="symptoms" value="respiratory problems"/>respiratory problems<br/>
-<input type="checkbox" name="symptoms" value="weakness"/>weakness<br/>
-<input type="submit" name="submit"/><br/>
-</form>
-<h1><span color="DarkSalmon">Contact Me</span></h1>
-<form>
-Name<input type="text" name="name"/><br/>
-email<input type="email" name="email"/><br/>
-<textarea name="message"></textarea>
-<input type="submit" value="SEND" class="submit"/>
-</form>
-</p>
-<div class="section">
-  <h1><span>My Media</span></h1>
-  <iframe height="150" width="300" src="https://www.youtube.com/embed/Q6_5InVJZ88" allowfullscreen frameborder="0"></iframe>
-        </div>
-<div>
-<p class="first">This is not in the intro section.</p>
-<p>The second paragraph is not in the intro section.</p>
-</div>
-<p class="first">This is a <em>paragraph</em></p>
-<p>This is second paragraph.</p>
-<p class="serif">This is a paragraph shown in serif font.</p>
-<p class="sansserif">This is a paragraph shown in sansserif font.</p>
-<p class="monospace">This is a paragraph shown in monospace font.</p>
-<p class="cursive">This is a paragraph shown in cursive font.</p>
-<p class="fantasy">This is a paragraph shown in fantasy font.</p>
-<p> Do not forget to buy <mark>milk</mark> today<br/> My favourite color is <del>blue</del> <ins>red</ins></p>
-<p>Naruto said :<q>Why don't you give up on trying to make me give up</q><br/> The <abbr title=" World Health Organisation">WHO</abbr> was founded in 1948</p>
-<address>
-Written by: Muskan Rathore 
-Visit us at: Our home page of course
-Contact: 1234566777
-</address>
-<p><cite>The Scream</cite> by Edward Munch. Painted in 1893</p>
-<bdo dir="rtl">This text will be written from right to left</bdo>
-
+<body font color="white" bgcolor="#009999">
+<h1 ><font color="white" >COVID-19: Helping Yourself at Home</font></h1>
+<script>
+document.write("<h1>Hello World Let's Fight Corona</h1>");
+</script>
+<p style="color:white;font-size:40px;">As COVID-19 cases keep on increasing exponentially, there is a dire need to take precautions and safety measures in order to prevent a potential community spread.Here is a list of must-know information and precautions required to battle these tough times.<br/>
+<ul><li><a href="#sanitizer">MAKING A GENERAL PURPOSE SANITIZER AT HOME</a></li>
+<li><a href="#masks">EFFECTIVE USE OF MASKS</a>
+<li><a href="#medication">MEDICATION FOR SELF QUARANTINED PATIENTS</a>
+<li><a href="#guidelines">GOVERNMENT GUIDELINES FOR SELF QUARANTINED PATIENTS</a>
+</ul>
+<ul><li id="sanitizer">MAKING A GENERAL PURPOSE SANITIZER AT HOME: Sanitizer has become a necessity and is required in abundance and nearly everything we come in contact with needs to be sanitized in a proper way.Here is a cost effective and less time time consuming method by which we can make one at home.<br/>Materials Required: Sodium Hypochlorite Solution(2-5L Can) or any WHO recommended solution effective against COVID-19 virus,A pressure sprayer(1-2L),Water<br/>
+Steps :<br/>
+<ol><li>Wear Safety Gloves, do not allow any sort of contact with the concentrated solution.</li>
+<li>Measure the volume of the solution according to the following table.</li>
+<img align="center" src="table.png"/>
+<li>Mix it well with water in the pressure sprayer.</li>
+<li>The solution is all purpose and can be used to spray on fruits and vegetables(first spray on the vegetables and then <b>make sure to rinse them with water</b>), commodities brought from outside into the house or to sanitize yourself when you have been outside(make sure to not to spray it in your eyes or nose, use a facewash seperately)</li></ol></li></br>
+<li id="masks">EFFECTIVE USE OF MASKS:Though masks are a major equipment in prevention of Corona virus, if not used effectively can turn the tables other way round. It is necessary that mask being used fulfills the following parameters for use:<ul><li>Fits snugly but comfortably against the side of the face and should cover nose and mouth perfectly with  no exposure to the surroundings.</li><img src="mask 2.png"/>
+<li>Be secured with ties or ear loops.</li><br/><img src="mask 1.png"/>
+<li>Includes multiple layers of fabric.</li>
+<li>Allows for breathing without restriction.</li>
+<li>Can be laundered and machine dried without damage or change to shape.</li><img src="mask 3.png"/>        <img src="mask 4.png"/> 
+<li>Is not touched with hands during it usage.</li><li>Make sure to not repeat the same mask after one usage. Wash the mask with soap by soaking in warm water and dry them in the sunlight.If possible use two masks alternatively day by day.</li></ul></li></br>
+<li id="medication">MEDICATION FOR SELF QUARANTINED PATIENTS:Due to shortage of beds, patients with mild symptoms are advised to practice home isolation. Following are the medicines that can be consumed as per ICMR guidelines:
+<ul>
+<li>Tab HYDROXYCHLOROQUINE 400mg once a week</li>
+<li>Tab VITAMIN C 1g once a day </li>
+<li>Tab ZINC 50 mg once a day</li>
+<li><u>In case of fever:</u> tab CROCIN/CALPOL 650mg if necessary</li>
+<li><u>In case of throat pain and cough</u><ul><li>tab CETRIZINE 10 mg once a day</li><li>Syrup ALEX 2-3 tea spoons 3 times a day</li></ul></li><li><b>NOTE</b> The virus that causes COVID-19 is in a family of viruses called Coronaviridae. Antibiotics do not work against viruses.</li></ul>
+<br/><li id="guidelines">GOVERNMENT GUIDELINES FOR SELF QUARANTINED PATIENTS:The following link provided gives further guidelines for self quarantined patients :
+<a href="https://www.mohfw.gov.in/pdf/RevisedguidelinesforHomeIsolationofverymildpresymptomaticCOVID19cases10May2020.pdf">Guidelines issued by Govt.</a></li>
+</ul></li></ul></p>
 </body>
 </html>
