--- a/index.html
+++ b/index.html
@@ -1,46 +1,26 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 <head>
+<meta charset="UTF-8"/>
+<meta name="viewpoint" content="width=device-width, initial-scale=1.0"/>
 <style>
-body{color:white;}
+{*margin:0; padding:0;}
+body{background:#663d00;}
+.container{display:flex; justify-content:center; align-items:center; flex-direction:column;}
+.neu{height:65px; width:200px; background:#663d00; border-radius:25px;
+box-shadow: -4px -4px 5px #ffffff70, 3px 3px 15px #00000070}
+
 </style>
-<title>COVID-19 Help Yourself</title>
-<script src="javascripts practice.js">
-</script>
+<title>
+freelancintine
+</title>
 </head>
-<body font color="white" bgcolor="#009999">
-<h1 ><font color="white" >COVID-19: Helping Yourself at Home</font></h1>
-<script>
-document.write("<h1>Hello World Let's Fight Corona</h1>");
-</script>
-<p style="color:white;font-size:40px;">As COVID-19 cases keep on increasing exponentially, there is a dire need to take precautions and safety measures in order to prevent a potential community spread.Here is a list of must-know information and precautions required to battle these tough times.<br/>
-<ul><li><a href="#sanitizer">MAKING A GENERAL PURPOSE SANITIZER AT HOME</a></li>
-<li><a href="#masks">EFFECTIVE USE OF MASKS</a>
-<li><a href="#medication">MEDICATION FOR SELF QUARANTINED PATIENTS</a>
-<li><a href="#guidelines">GOVERNMENT GUIDELINES FOR SELF QUARANTINED PATIENTS</a>
-</ul>
-<ul><li id="sanitizer">MAKING A GENERAL PURPOSE SANITIZER AT HOME: Sanitizer has become a necessity and is required in abundance and nearly everything we come in contact with needs to be sanitized in a proper way.Here is a cost effective and less time time consuming method by which we can make one at home.<br/>Materials Required: Sodium Hypochlorite Solution(2-5L Can) or any WHO recommended solution effective against COVID-19 virus,A pressure sprayer(1-2L),Water<br/>
-Steps :<br/>
-<ol><li>Wear Safety Gloves, do not allow any sort of contact with the concentrated solution.</li>
-<li>Measure the volume of the solution according to the following table.</li>
-<img align="center" src="table.png"/>
-<li>Mix it well with water in the pressure sprayer.</li>
-<li>The solution is all purpose and can be used to spray on fruits and vegetables(first spray on the vegetables and then <b>make sure to rinse them with water</b>), commodities brought from outside into the house or to sanitize yourself when you have been outside(make sure to not to spray it in your eyes or nose, use a facewash seperately)</li></ol></li></br>
-<li id="masks">EFFECTIVE USE OF MASKS:Though masks are a major equipment in prevention of Corona virus, if not used effectively can turn the tables other way round. It is necessary that mask being used fulfills the following parameters for use:<ul><li>Fits snugly but comfortably against the side of the face and should cover nose and mouth perfectly with  no exposure to the surroundings.</li><img src="mask 2.png"/>
-<li>Be secured with ties or ear loops.</li><br/><img src="mask 1.png"/>
-<li>Includes multiple layers of fabric.</li>
-<li>Allows for breathing without restriction.</li>
-<li>Can be laundered and machine dried without damage or change to shape.</li><img src="mask 3.png"/>        <img src="mask 4.png"/> 
-<li>Is not touched with hands during it usage.</li><li>Make sure to not repeat the same mask after one usage. Wash the mask with soap by soaking in warm water and dry them in the sunlight.If possible use two masks alternatively day by day.</li></ul></li></br>
-<li id="medication">MEDICATION FOR SELF QUARANTINED PATIENTS:Due to shortage of beds, patients with mild symptoms are advised to practice home isolation. Following are the medicines that can be consumed as per ICMR guidelines:
-<ul>
-<li>Tab HYDROXYCHLOROQUINE 400mg once a week</li>
-<li>Tab VITAMIN C 1g once a day </li>
-<li>Tab ZINC 50 mg once a day</li>
-<li><u>In case of fever:</u> tab CROCIN/CALPOL 650mg if necessary</li>
-<li><u>In case of throat pain and cough</u><ul><li>tab CETRIZINE 10 mg once a day</li><li>Syrup ALEX 2-3 tea spoons 3 times a day</li></ul></li><li><b>NOTE</b> The virus that causes COVID-19 is in a family of viruses called Coronaviridae. Antibiotics do not work against viruses.</li></ul>
-<br/><li id="guidelines">GOVERNMENT GUIDELINES FOR SELF QUARANTINED PATIENTS:The following link provided gives further guidelines for self quarantined patients :
-<a href="https://www.mohfw.gov.in/pdf/RevisedguidelinesforHomeIsolationofverymildpresymptomaticCOVID19cases10May2020.pdf">Guidelines issued by Govt.</a></li>
-</ul></li></ul></p>
+<body>
+<div class="WebsiteName" style="height:100px"><h1 style="font-size:60px; color:white;" align="center">Freelancintine</h1></div>
+<div class="container">
+<div class="neu">
+<h2 align="center" style="color:white;">Home Page</h2>
+</div>
+</div>
 </body>
 </html>
