--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
 <meta name="viewpoint" content="width=device-width, initial-scale=1.0"/>
 <style>
 {*margin:0; padding:0;}
-body{background:#663d00;}
-.container{display:flex; justify-content:center; align-items:center; flex-direction:column;}
-.neu{height:65px; width:200px; background:#663d00; border-radius:25px;
-box-shadow: -4px -4px 5px #ffffff70, 3px 3px 15px #00000070}
+body{background:#e6cab3;}
+.container{display:flex; justify-content:center; align-items:right; flex-direction:column;}
+.neu{height:65px; width:200px; background:#e6cab3; border-radius:25px;
+box-shadow: -4px -4px 5px #ffffff50, 3px 3px 15px #00000050}
+.container1{display:flex; justify-content:center; align-items:right; flex-direction:column;}
+.neu1{height:65px; width:200px; background:#e6cab3; border-radius:25px;
+box-shadow: -4px -4px 5px #ffffff50, 3px 3px 15px #00000050}
+.container2{display:flex; justify-content:center; align-items:right; flex-direction:column;}
+.neu2{height:65px; width:200px; background:#e6cab3; border-radius:25px;
+box-shadow: -4px -4px 5px #ffffff50, 3px 3px 15px #00000050}
+.container3{display:flex; justify-content:center; align-items:right; flex-direction:column;}
+.neu3{height:65px; width:200px; background:#e6cab3; border-radius:25px;
+box-shadow: -4px -4px 5px #ffffff50, 3px 3px 15px #00000050}
+.neu:hover{box-shadow:inset -4px -4px 5px #ffffff50, 3px 3px 15px #00000050 }
+.neu1:hover{box-shadow:inset -4px -4px 5px #ffffff70, 3px 3px 15px #00000070; }
+.neu2:hover{box-shadow:inset -4px -4px 5px #ffffff70, 3px 3px 15px #00000070; }
+.neu3:hover{box-shadow:inset -4px -4px 5px #ffffff70, 3px 3px 15px #00000070; }
 
 </style>
 <title>
@@ -16,11 +29,33 @@ freelancintine
 </title>
 </head>
 <body>
-<div class="WebsiteName" style="height:100px"><h1 style="font-size:60px; color:white;" align="center">Freelancintine</h1></div>
+<div class="WebsiteName" style="height:100px"><h1 style="font-size:60px; color:#4d004d;" align="center">Freelancintine</h1></div>
+<div class="row">
 <div class="container">
 <div class="neu">
-<h2 align="center" style="color:white;">Home Page</h2>
+<h2 align="center" style="color:#4d004d;">Home Page</h2>
 </div>
+</div>
+<br>
+<div class="container1">
+<div class="neu1">
+<h2 align="center" style="color:#4d004d;">Skills Required</h2>
+</div>
+</div>
+<br>
+<div class="container2">
+<div class="neu2">
+<h2 align="center" style="color:#4d004d;">Course Structures</h2>
+</div>
+</div>
+<br>
+<div class="container3">
+<div class="neu3">
+<h2 align="center" style="color:#4d004d;">Profile Building</h2>
+</div>
+</div>
+<div class="Content for pages">
+<p></p>
 </div>
 </body>
 </html>
