--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@ freelancintine
 </div>
 </div>
 <div class="column right" style="background-color:#fff9e6; box-shadow: -4px -4px 5px #ffffff50, 3px 3px 15px #00000050;border-radius:25px">
+  <!--AASTHA YOU HAVE TO START YOUR CODE HERE-->
 <h2>Column 2</h2>
 <p>Content Goes here</p>
+  <!--AND END IT TILL THIS COMMENT-->
 <div>
 </div>
 <p></p>
