--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ box-shadow: -4px -4px 5px #ffffff50, 3px 3px 15px #00000050}
 .column {
   float: left;
   padding: 10px;
- height: 300px; /* Should be removed. Only for demonstration */
+  /* Should be removed. Only for demonstration */
 }
 
 .left {
@@ -57,7 +57,7 @@ freelancintine
 </title>
 </head>
 <body>
-<div class="WebsiteName" style="height:100px"><h1 style="font-size:60px; color:#4d004d;" align="center">Freelancintine</h1></div>
+<div class="WebsiteName" style="height:100px"><h1 style="font-size:60px; color:#4d004d;" align="center">&#128218 Freelancintine &#128184</h1></div>
 <div class="row">
 <div class="column left" style="background-color:#e6cab3;">
 <div class="container">
@@ -68,7 +68,7 @@ freelancintine
 <br>
 <div class="container1">
 <div class="neu1">
-<h2 align="center" style="color:#4d004d;">Skills Required</h2>
+<h2 align="center" style="color:#4d004d;">Freelancing</h2>
 </div>
 </div>
 <br>
