--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ freelancintine
 <br>
 <div class="container3">
 <div class="neu3">
-<h2 align="center" style="color:#4d004d;">Profile Building</h2>
+  <h2 align="center" style="color:#4d004d;"><a href="ProfileBuilding.html">Profile Building</a></h2>
 </div>
 </div>
 </div>
