--- a/ProfileBuilding.html
+++ b/ProfileBuilding.html
@@ -87,7 +87,61 @@ freelancintine
 <!--START CONTENT HERE-->
 <h2>Profile Building</h2>
 <p>In order to attract clients, a good presentation of your skills is necessary. Hence, it is necessary to build a strong and precise profile
-and make use of appropriate platforms to put your skills for public display</p>
+and make use of appropriate platforms to put your skills for public display. Here is a beginner friendly list of steps that will guide you to build 
+make an impressionable profile:<br>
+<ul>
+<li><h1>BE PROFESSIONALLY ACTIVE ON SOCIAL MEDIA:</h1>Start by building accounts and displaying your work on platforms such as linked, GitHub,
+Instagram, YouTube, FaceBook,etc. Make sure to choose an appropriate platform according to your skills. For example, if you are a programmer
+or a web developer, you can give link to your repositories and projects on github, if you are a video editor or a photographer, you can choose
+platforms such as Instagram or YouTube. Clients usually need a demo of your work before paying you or signing a deal with you. So, make
+sure you display the best of your skills on these platforms and maintain similar or even better quality of work while you are working
+your clients.</li>
+<li>
+<h1>WRITE A TITLE THAT BEST DESCRIBES YOU:</h1>
+Titles or Professional Headings are one liners that tell what you are professionally. Make sure they are inclusive and exact about your work.
+</li>
+<li>
+<h1>IMPROVE YOUR WRITING SKILLS:</h1>Most of the freelancing websites require an overview or short description about you that describes your
+work. Be as specific and precise as you can, make sure not to be too verbose and not to mention too many skills at once. Many times you may 
+have knowledge about more than one skills that are verygs diverse such as you may be a video editor and a good marketer too or may have some graphic design skills too.
+In this case you may feel tempted mention everything no matter how diverse they are, you may think that more generic skills, more the
+clients will be attracted. But in reality, the opposite is true, most employers are looking to employ people who specialise in a specfic skills,
+one who can guarantee the quality of work they want. Hence, it is important to mention and describe the skills you are confident and excellent in.
+Also, your description should be free from any gramatic errors, spelling mistakes and is always written in first person.
+</li>
+<li>
+<h1>MENTION YOUR EDUCATIONAL QUALIFICATION AND EXPERIENCE:</h1>
+Be transparent with people about your background, it will highlight you as a trustworthy individual. Here is a list of checkpoints that you can add:\
+<ul>
+<li>Educational qualifications and degrees</li>
+<li>Employment History/Years of Experience</li>
+<li>Areas of expertise and/or your specialty</li>
+<li>Technical skills</li>
+
+</ul>
+</li>
+<li>
+<h1>UPLOAD A PROFESSSIONAL LOOKING PHOTO:</h1>
+Do not upload a selfie, a photo with unprofessional expressions or one having a noticable background. Always choose a photo with simple 
+expressions and plain background through which you can be easily recognised. Do not accesorise yourself too much such as wearing goggles or
+applying too much make-up.
+</li>
+<li>
+<h1>BE EASILY APPROACHABLE:</h1>
+Provide valid contact information and don't make your clients go through hoops in order to contact you. It is preferable to make use of 
+chatting platforms or providing a valid email address where the cleint can drop an email. You can also mention specific amount of waiting time 
+i.e. minimum time the client has to wait after contacting you or dropping you an email for an appropriate reply. 
+Discrepancy in communication reduces reliability among clients for you. It is advised to maintain a separate e-mail and phone number for 
+professional work.
+</li>
+<li>
+<h1>IMPROVE YOUR COMMUNICATION SKILLS IN ENGLISH:</h1>
+English is most preferable language accross the globe. In order to attract more international clients it is important to have a good hold over it.
+Work on your weaknesses(if any) such as stamerring, vocabulary, grammar, lack of confidence, etc. It is really important for the client to 
+believe in you and have confidence in you. In many cases, the only possibility for conectivity would only be through calls or video calls, hence 
+it is really important to converse what you want to express. 
+</li>
+</ul></p>
 <!--END CONTENT BEFORE HERE-->
 <div>
 </div>
