--- a/index.html
+++ b/index.html
@@ -62,25 +62,20 @@ freelancintine
 <div class="column left" style="background-color:#e6cab3;">
 <div class="container">
 <div class="neu">
-<h2 align="center" style="color:#4d004d;">Home Page</h2>
+  <h2 align="center" style="color:#4d004d;"><a href="index.html">Home Page</a></h2>
 </div>
 </div>
 <br>
 <div class="container1">
 <div class="neu1">
-<h2 align="center" style="color:#4d004d;">Freelancing</h2>
+  <h2 align="center" style="color:#4d004d;"><a href="SECTION1.html">Freelancing</a></h2>
 </div>
 </div>
 <br>
-<div class="container2">
-<div class="neu2">
-<h2 align="center" style="color:#4d004d;">Course Structures</h2>
-</div>
-</div>
 <br>
 <div class="container3">
 <div class="neu3">
-<h2 align="center" style="color:#4d004d;">Profile Building</h2>
+  <h2 align="center" style="color:#4d004d;"><a href="ProfileBuilding.html">Profile Building</a></h2>
 </div>
 </div>
 </div>
