--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8"/>
 <meta name="viewpoint" content="width=device-width, initial-scale=1.0"/>
 <style>
+    
 {*margin:0; padding:0;}
 body{background:#e6cab3;}
 .container{display:flex; justify-content:center; align-items:right; flex-direction:column;}
@@ -82,16 +83,16 @@ freelancintine
 <div class="column right" style="background-color:#fff9e6; box-shadow: -4px -4px 5px #ffffff50, 3px 3px 15px #00000050;border-radius:25px">
   <!--AASTHA YOU HAVE TO START YOUR CODE HERE-->
 <h1>About freelancitine...</h1>
-<pre><p>
-There is no getting around it: you are shut in your house and do not know what to do to pass the time.
-Life right now is almost totally online. 
-We made this guide to show you how the web can help you through this difficult time.
+<p>
+There is no getting around it: you are shut in your house and do not know what to do to pass the time.<br/>
+Life right now is almost totally online. <br/>
+We made this guide to show you how the web can help you through this difficult time.<br/>
 
-So, we have taken the initiative to make you familiarise with the concept of <b> Freelancing </b>, providing information and resources which can come handy.
+So, we have taken the initiative to make you familiarise with the concept of <b> Freelancing </b>, providing information and resources which can come handy.<br/>
 
 
 <b><i><q>Opportunities to find deeper powers within ourselves come when life seems most challenging.</q></i></b>
-</p></pre>
+</p>
   <!--AND END IT TILL THIS COMMENT-->
 <div>
 </div>
