--- a/SECTION1.html
+++ b/SECTION1.html
@@ -96,19 +96,19 @@ freelancintine
 <li><h4><a href="#tc"> Traits and Characteristics needed to be a <b> Freelancer </b></a></h4></li>
 
 <p id="wiafl"><h3>Who is a Freelancer? </h3>
-<pre>
 A freelancer, or independent contractor, is a self-employed individual who does not have to commit to a single, long-term employer. 
 Instead, they work independently for several different companies or clients. 
-Freelancers typically charge by the hour or day and are not required to register as a business if they operate under their own name.
+Freelancers typically charge by the hour or day and are not required to register as a business if they operate under their own name.<br/>
 Today, the term is often associated with writers, photographers, editors, programmers, website designers, and professional consultants, 
 as well as many other professional services.
-</pre></p>
+</p>
 
 <p id="pac"><h3>Pros and Cons of Freelancing </h3>
-<pre>
-Every job has pros and cons, and freelancing is no different.  
-Being aware of challenges ahead can ensure you are prepared and dealing with reality.
 
+Every job has pros and cons, and freelancing is no different.<br/>
+Being aware of challenges ahead can ensure you are prepared and dealing with reality.<br/>
+<br/>
+  <br/>
 Some of the advantages of being a freelancer include:
 <ol>
 <li><b>Flexible work schedule</b>: You can choose which hours to work and can set your own schedule to fit around other commitments.</li>
@@ -117,7 +117,7 @@ you can pick your projects and are less confined to specific markets or sectors.
 <li><b>More control</b>: You can set your own goals and will have more say in the direction of your business.</li>
 </ol>
 
-On the other hand, there are several disadvantages to consider, including:
+<br/>On the other hand, there are several disadvantages to consider, including:
 <ol>
 
 <li><b>Less stability</b>: Because freelance work depends on reaching enough clients, many freelancers have less financial stability 
@@ -125,10 +125,10 @@ and less guarantee of future work than employees.</li>
 <li><b>Fewer benefits</b>: <ul><li>Many companies offer benefits for their employees, such as insurance or pension plans.</li> 
                            <li>Self-employed freelancers would be responsible for their own perks and benefits</li>
                            </ul> </li> </ol>
-</pre></p>
+</p>
 <p id="mcf"><h3>Most Common Career Fields in Freelancing </h3>
-<pre>
-The best freelancing gigs are:
+
+The best freelancing gigs are:<br/>
 <ul>
 <li><b>Marketing</b>                   - Project managers, Marketing coordinators, or Marketing managers </li>
 <li><b>Business Project Management</b> - Project Manager, Process Analyst. </li>
@@ -141,13 +141,12 @@ The best freelancing gigs are:
 <li><b>Graphic Design</b>              - Website and application designers .</li>
 <li><b>Administrative Assistant </b>   - Professional assistants </li>
 </ul>
-</pre></p>
+</p>
 
 <p id="wtf"><h3>Where to Find the WORK?</h3>
-<pre>
 If you are just starting out, you may not have that large of a network. 
 That is alright because there are plenty of job boards and websites out there designed specifically to help freelancers find a job. 
-Some of the more well-known job boards and freelance websites are:
+Some of the more well-known job boards and freelance websites are:<br/>
 
 <li><a href="https://www.fiverr.com">Fiverr</a></li>
 <li><a href="https://www.upwork.com">Upwork</a></li>
@@ -159,13 +158,13 @@ Some of the more well-known job boards and freelance websites are:
 <li><a href="https://www.freelancer.in">Freelancer</a></li>
 <li><a href="https://www.guru.com">Guru</a></li>
 <li><a href="https://www.flexjobs.com">FlexJobs</a></li>
-</pre></p>
-
+</p>
+<br/>
 <p id="tc"><h3>Traits and Characterisitics needed to be a Freelancer</h3>
-<pre>
 There are a few qualities you should possess to set yourself up for freelance success. 
 While not an all-encompassing list, these important characteristics will give you an idea of where you should focus.
-<ol>
+<br/>
+  <ol>
 <li><b>Discipline</b>: <ul>
   <li>There is no boss watching you out of the corner of their eye or colleagues to judge you when you spend an hour 
 online shopping instead of working.</li> 
@@ -199,7 +198,7 @@ client and handle them tactfully and professionally. </li>
 
 
 </ol>
-</pre></p>
+</p>
 
 
   <!--AND END IT TILL THIS COMMENT-->
