--- a/ProfileBuilding.html
+++ b/ProfileBuilding.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewpoint" content="width=device-width, initial-scale=1.0"/>
+<link rel="stylesheet" href="style.css">
 <style>
 {*margin:0; padding:0;}
 body{background:#e6cab3;}
@@ -18,10 +19,14 @@ box-shadow: -4px -4px 5px #ffffff50, 3px 3px 15px #00000050}
 .container3{display:flex; justify-content:center; align-items:right; flex-direction:column;}
 .neu3{height:65px; width:200px; background:#e6cab3; border-radius:25px;
 box-shadow: -4px -4px 5px #ffffff50, 3px 3px 15px #00000050}
+.container4{display:flex; justify-content:center; align-items:right; flex-direction:column;}
+.neu4{height:65px; width:200px; background:#e6cab3; border-radius:25px;
+box-shadow: -4px -4px 5px #ffffff50, 3px 3px 15px #00000050}
 .neu:hover{box-shadow:inset -4px -4px 5px #ffffff50, 3px 3px 15px #00000050 }
 .neu1:hover{box-shadow:inset -4px -4px 5px #ffffff70, 3px 3px 15px #00000070; }
 .neu2:hover{box-shadow:inset -4px -4px 5px #ffffff70, 3px 3px 15px #00000070; }
 .neu3:hover{box-shadow:inset -4px -4px 5px #ffffff70, 3px 3px 15px #00000070; }
+.neu4:hover{box-shadow:inset -4px -4px 5px #ffffff70, 3px 3px 15px #00000070; }
 * {
   box-sizing: border-box;
 }
@@ -61,22 +66,29 @@ freelancintine
 <div class="column left" style="background-color:#e6cab3;">
 <div class="container">
 <div class="neu">
-  <h2 align="center" style="color:#4d004d;"><a href="index.html">Home Page</a></h2>
+  <h2 align="center" style="color:#4d004d;"><a href="index.html" class="user">Home Page</a></h2>
 </div>
 </div>
 <br>
 <div class="container1">
 <div class="neu1">
-  <h2 align="center" style="color:#4d004d;"><a href="SECTION1.html">Freelancing</a></h2>
+  <h2 align="center" style="color:#4d004d;"><a href="SECTION1.html" class="user">Freelancing</a></h2>
 </div>
 </div>
 <br>
 <br>
 <div class="container3">
 <div class="neu3">
-  <h2 align="center" style="color:#4d004d;"><a href="ProfileBuilding.html">Profile Building</a></h2>
+  <h2 align="center" style="color:#4d004d;"><a href="ProfileBuilding.html" class="user">Profile Building</a></h2>
 </div>
 </div>
+<br>
+<br>
+<div class="container4">
+    <div class="neu4">
+      <h2 align="center" style="color:#4d004d;"><a href="chargecal.html" class="user">Charge Calculator</a></h2>
+    </div>
+    </div>
 </div>
 <div class="column right" style="background-color:#fff9e6; box-shadow: -4px -4px 5px #ffffff50, 3px 3px 15px #00000050;border-radius:25px">
 <!--START CONTENT HERE-->
